<resources>
    <string name="app_name">GlobeTrotter</string>
    <string name="placeholder_fragment">Welcome to The Game</string>

    <!-- Title Fragment Strings -->
    <string name="startAdvButton">Start An Adventure</string>
    <string name="nameInput">Enter Your Name</string>
    <string name="title_icon_Description">Title Icon</string>
    <string name="choose_origin_btn">Choose Your Starting Point</string>

    <!-- Player Fragment Strings -->
    <string name="choose_location_btn">Plant a Flag</string>
    <string name="name_label">Name</string>
    <string name="score_label">Score</string>
    <string name="origin_label">Origin(Latitude, Longitude)</string>
    <string name="delete_btn">Delete</string>
    <string name="use_current_location_btn">Use Current Location</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Maps Fragment Strings -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled</string>
    <string name="action_locate">Pick a Place</string>
    <string name="MAPS_API_KEY">AIzaSyCAkKW1imsLQsDH8qKcjdaX_aZU3YG44tk</string>

    <!-- Players List Strings -->
    <string name="player_name_header">Player Name</string>
    <string name="current_score_header">Score</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add Player Strings -->
    <string name="player_name_label_hint">Player Name *</string>
    <string name="add_player_btn">Add Player</string>
    <string name="add_new_player">Add New Player</string>

    <!-- Place Info Strings -->
    <string name="moreInfo">MORE INFO</string>
    <string name="plant_flag_here">Plant Flag Here</string>
    <string name="point_value">Point Value:</string>
    <string name="location_address">Address</string>
</resources>