<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="349dp"
        tools:context=".MapsFragment" />

    <TextView
        android:id="@+id/placeName"
        style="@style/Widget.Globetrotter.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map" />

    <TextView
        android:id="@+id/address"
        style="@style/Widget.Globetrotter.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/location_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pointLabel" />

    <TextView
        android:id="@+id/pointLabel"
        style="@style/Widget.Globetrotter.TextView"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:background="@color/teal_200"
        android:text="@string/point_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeName" />


    <Button
        android:id="@+id/moreInfoBtn"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/moreInfo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pointLabel" />

    <Button
        android:id="@+id/plantFlagHereBtn"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/plant_flag_here"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moreInfoBtn" />

</LinearLayout>