<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/playerLabel"
            style="@style/Widget.Globetrotter.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Player"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/divider"
            android:gravity="center"/>

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/nameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerLabel" />


        <TextView
            android:id="@+id/nameLabel"
            style="@style/Widget.Globetrotter.TextView"
            android:layout_width="wrap_content"
            android:text="@string/name_label"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            />

        <TextView
            android:id="@+id/originLabel"
            style="@style/Widget.Globetrotter.TextView"
            android:layout_width="wrap_content"
            android:text="Origin(Lat Long):    "
            app:layout_constraintBaseline_toBaselineOf="@id/originLatLongLabel"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameLabel"/>

        <TextView
            android:id="@+id/originLatLongLabel"
            style="@style/Widget.Globetrotter.TextView"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/nameLabel"
            app:layout_constraintStart_toEndOf="@id/originLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="(0.0, 0.0)"/>

        <Button
            android:id="@+id/useCurrentLocationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/use_current_location_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/originLatLongLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/scoreLabel"
            style="@style/Widget.Globetrotter.TextView"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Score:   "
            app:layout_constraintBaseline_toBaselineOf="@id/score"
            app:layout_constraintTop_toBottomOf="@id/useCurrentLocationBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/score"
            />

        <TextView
            android:id="@+id/score"
            style="@style/Widget.Globetrotter.TextView"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/score_label"
            app:layout_constraintTop_toBottomOf="@id/useCurrentLocationBtn"
            app:layout_constraintStart_toEndOf="@id/scoreLabel"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/chooseLocationBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/choose_location_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/score"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/deleteBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/delete_btn"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/chooseLocationBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>